added API Create and Index sys_menu and change code
