# resource/app/sys-menu/router.js
@@ -1,0 +1,14 @@
+const router = require("express").Router();
+const controller = require("./controller");
+
+/**
+ * @route GET /menu
+ * @group Users - Operations about users
+ * @tag Users
+ * @returns {Array.<User>} 200 - An array of users
+ * @returns {Error} 500 - Internal server error
+ */
+router.get("/", controller.Index);
+router.post("/", controller.Create);
+
+module.exports = router;
