# resource/schema/sys-menu.js
@@ -1,0 +1,7 @@
+const { SysMenuModelDefine } = require("../models/sys-menu");
+
+const MenuSchema = {
+  BodyMenuSchema: SysMenuModelDefine,
+};
+
+module.exports = MenuSchema;
